k8s/01-namespace-configmap.yaml
---
# Namespace for EroArchive application
apiVersion: v1
kind: Namespace
metadata:
  name: erolabs
  labels:
    name: erolabs
