k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gvault
  namespace: gvault
spec:
  selector:
    app: gvault
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
